--- a/css/styles.css
+++ b/css/styles.css
@@ -478,8 +478,304 @@ margin-bottom: 0;
   margin-bottom: 0;
   margin-top: 16px;
 } */
+@media screen and (max-width:480px) {
+  .container {
+      width: 396px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+.menu,
+.contacts{
+  display: none;
+}
+
+}
+@media screen and (min-width:480px) {
+ .mobil-menu-open,
+ .mobil-menu-container,
+ .mobile-menu-clos-btn {
+   display: none;
+ }
+}
+@media screen and (max-width:768px) {
+  .container {
+    width: 736px;
+  }
+
+  /* .mobil-menu-open,
+  .mobil-menu-container,
+  .mobile-menu-clos-btn {
+    display: none;
+  } */
+}
+
+
+
+@media screen and (min-width:1200px) {
+  .container {
+    width: 1158px;
+  }
+ .mobil-menu-open,
+ .mobil-menu-container,
+ .mobile-menu-clos-btn{
+  display: none;
+ }
+  
+}
+/* Mobil */
+
+@media (min-width:0px) and (max-width:479px) {
+  .mobil-menu-open {
+    height: 22px;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+  }
+
+  .coddac {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+  }
+
+  .beginning {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
+  .mobil {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 500ms linear, visibility 500ms linear;
+  }
+
+  .mobil.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+
+  .mobil-menu-container {
+    position: relative;
+  }
+
+  .mobile-menu-clos-btn {
+    position: absolute;
+    top: 40px;
+    right: 24px;
+    width: 24px;
+    border-radius: 50%;
+    background: var(--brand-color-white-2);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 24px;
+    padding: 0;
+    margin: 0;
+
+  }
+
+  .menu-mobil {
+    display: flex;
+    flex-direction: column;
+    color: var(--brand-color-black);
+    align-items: flex-start;
+    padding-top: 80px;
+    padding-left: 24px;
+    gap: 40px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    list-style: none;
+    margin-top: auto;
+    text-decoration: none;
+
+  }
+
+  .link-mobil {
+    text-decoration: none;
+    color: var(--brand-color-blac);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  }
+
+  .portfolio-link-mobil {
+    text-decoration: none;
+    color: var(--brand-color-blac);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+
+  }
+
+
+  .menu-mobil .link-mobil:hover,
+  .menu-mobil .link-mobil:focus {
+    color: var(--brand-color-black-text);
+
+  }
+
+  .contacts-mobil {
+    display: flex;
+    flex-direction: column;
+    margin-top: 284px;
+    padding-left: 24px;
+    list-style: none;
+  }
+
+  .fone-mobil {
+    list-style: none;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
+    width: 337px;
+    text-decoration: none;
+    color: var(--brand-color)
+  }
+
+  .infodevstudio-mobil {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    margin-top: 40px;
+    text-decoration: none;
+
+    color: var(--brand-color-black-text)
+  }
+
+  .mail-mobil {
+    margin-top: 40px;
+  }
+
+  .wardrobe-list-mobil {
+    display: flex;
+    gap: 56px;
+    margin-top: 48px;
+    padding-left: 24px;
+
+  }
+
+  .link-mobil {}
+
+  .mobile-menu-clos-icon {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: var(--brand-color-black-1);
+    margin: auto;
+
+  }
+
+  .container {
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+
+  }
+}
+
+
+/* Tabl */
+@media (min-width: 480px) and (max-width: 1199px) {
+  .tabl-container{
+    display: flex;
+  }
+  .tabl-navigation {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  .tabl-webStudio {}
+
+  .tabl-menu {
+    display: flex;
+    margin-left: 120px;
+    gap: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--brand-color-black);
+    text-decoration: none;
+    list-style: none;
+
+  }
+
+  .tabl-link-port {
+    text-decoration: none;
+    color: var(--brand-color-blue);
+  }
+
+  .tabl-link-port::after {
+    content: " ";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--brand-color);
+    /* position: absolute; */
+    left: 0;
+    bottom: 0;
+
+  }
+
+  .tabl-link {
+    color: var(--brand-color-black);
+    text-decoration: none;
+  }
+
+  .navigation-item {
+    color: var(--brand-color);
+  }
+  .tabl-contacks{
+    margin-left: 118px;
+  }
+
+  .tabl-mail {
+    list-style: none;
+  }
+
+  .tabl-fone {
+    padding-top: 24px;
+  }
+
+  .tabl-fone,
+  .tabl-infodevstudio {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    text-decoration: none;
+    color: var(--brand-color-black-text);
+    padding-top: 4px;
+  }
+}
+
+
+
+
 /* Disctop */
-@media (min-width:1199px) {
+@media (min-width:1200px) {
+.beginning {
+
+    width: 100%;
+    display: flex;
+    background-color: var(--brand-color-white-background);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+.coddac {
+  display: flex;
+  align-items: center;
+}
 .menu {
     display: flex;
     flex-direction: row;
@@ -524,7 +820,9 @@ margin-bottom: 0;
     line-height: 24px;
     text-decoration: none;
   }
-
+.navigation-item {
+  color: var(--brand-color);
+}
 
   .mail {
     list-style: none;
@@ -626,288 +924,7 @@ margin-bottom: 0;
   }
   
 }
-/* Tabl */
 
-@media (min-width:0px) and (max-width:767px) {
-  .mobil-menu-open {
-      height: 22px;
-      padding: 0;
-      margin: 0;
-      background-color: transparent;
-      border: none;
-    }
-  
-    .coddac {
-      display: flex;
-      align-content: center;
-      justify-content: space-between;
-    }
-  
-    .beginning {
-      padding-top: 24px;
-      padding-bottom: 24px;
-    }
-  
-    .mobil {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      background-color: #FFFFFF;
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-      transition: opacity 500ms linear, visibility 500ms linear;
-    }
-  
-    .mobil.is-open {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: auto;
-    }
-  
-    .mobil-menu-container {
-      position: relative;
-    }
-  
-    .mobile-menu-clos-btn {
-      position: absolute;
-      top: 40px;
-      ;
-      right: 24px;
-      width: 24px;
-      border-radius: 50%;
-      background: var(--brand-color-white-2);
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      height: 24px;
-      padding: 0;
-      margin: 0;
-  
-    }
-  
-    .menu-mobil {
-      display: flex;
-      flex-direction: column;
-      color: var(--brand-color-black);
-      align-items: flex-start;
-      padding-top: 80px;
-      padding-left: 24px;
-      gap: 40px;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 1.11;
-      list-style: none;
-      margin-top: auto;
-      text-decoration: none;
-  
-    }
-  
-    .link-mobil {
-      text-decoration: none;
-      color: var(--brand-color-blac);
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 1.11;
-    }
-  
-    .portfolio-link-mobil {
-      text-decoration: none;
-      color: var(--brand-color-blac);
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 1.11;
-  
-    }
-  
-  
-    .menu-mobil .link-mobil:hover,
-    .menu-mobil .link-mobil:focus {
-      color: var(--brand-color-black-text);
-  
-    }
-  
-    .contacts-mobil {
-      display: flex;
-      flex-direction: column;
-      margin-top: 284px;
-      padding-left: 24px;
-      list-style: none;
-    }
-  
-    .fone-mobil {
-      list-style: none;
-      font-weight: 600;
-      font-size: 36px;
-      line-height: 1.11;
-      width: 337px;
-      text-decoration: none;
-      color: var(--brand-color)
-    }
-  
-    .infodevstudio-mobil {
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 1.2;
-      margin-top: 40px;
-      text-decoration: none;
-  
-      color: var(--brand-color-black-text)
-    }
-  
-    .mail-mobil {
-      margin-top: 40px;
-    }
-  
-    .wardrobe-list-mobil {
-      display: flex;
-      gap: 56px;
-      margin-top: 48px;
-      padding-left: 24px;
-  
-    }
-  
-    .link-mobil {}
-  
-    .mobile-menu-clos-icon {
-      border: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      fill: var(--brand-color-black-1);
-      margin: auto;
-  
-    }
-  
-    .container {
-      width: 100%;
-      padding-left: 16px;
-      padding-right: 16px;
-  
-    }
-}
-
-
-@media screen and (min-width:480px) {
-.container{
-  width: 396px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-  
-}
-
-@media screen and (min-width:768px) {
-  .container {
-    width: 736px;
-    
-  }
-
-}
-
-@media screen and (min-width:1200px) {
-  .container {
-    width: 1158px;
-
-  }
-
-}
-
-@media screen and (min-width:768px){
-.mobil-menu-open {
-  display: none;}
-.mobil{
-  display: none;
-
-}
-
-
-
-
-
-@media screen and (max-width: 1199px){
-  .menu {
-      display: none;
-    }
-  .mail{
-    display: none;
-  }
-}
-@media screen and (max-width:768px) {
-
-  .menu,
-  .contacts {
-    display: none;
-  }
-
-}
-@media (min-width: 768px) and (max-width: 1199px) {
-  .tabl-navigation {
-    display: flex;
-  }
-
-  .tabl-webStudio {}
-
-  .tabl-menu {
-    display: flex;
-    margin-left: 120px;
-    gap: 40px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--brand-color-black);
-    text-decoration: none;
-    list-style: none;
-
-  }
-
-  .tabl-link-port {
-    text-decoration: none;
-    color: var(--brand-color-blue);
-  }
-
-  .tabl-link-port::after {
-    content: " ";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--brand-color);
-    /* position: absolute; */
-    left: 0;
-    bottom: 0;
-
-  }
-
-  .tabl-link {
-    color: var(--brand-color-black);
-    text-decoration: none;
-  }
-
-  .navigation-item {
-    color: var(--brand-color);
-  }
-
-  .tabl-mail {
-    list-style: none;
-  }
-
-  .tabl-fone {
-    padding-top: 24px;
-  }
-
-  .tabl-fone,
-  .tabl-infodevstudio {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.33;
-    text-decoration: none;
-    color: var(--brand-color-black-text);
-    padding-top: 4px;
-  }
-}
 
 
 
@@ -1241,8 +1258,7 @@ align-items: baseline;
   text-decoration: none;
 }
 .foto-work-link-wrapper:hover .overlay,
-.foto-work-link-wrapper:focus .overlay
-{
+.foto-work-link-wrapper:focus .overlay{
   transform: translate(0,0);
 }
 
