--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,45 @@ margin-bottom: 0;
     padding-right: 16px;
 
   }
+.mobil-solution{
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office1.jpg');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  margin: 0 auto;
+  padding-top: 182px;
+  padding-bottom: 240px;
+  
+}
+.mobil-solutions-title{
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  margin-top: 0;
+  color: var(--brand-color-white-text);
+  text-align: center;
+}
+.mobil-button-studio{
+  font-family: "Roboto";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background: var(--brand-color);
+  
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin-top: 72px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: var(--brand-color-white-text);
+    width: 170px;
+    height: 51px;
+
+}
 }
 
 
@@ -922,6 +961,272 @@ margin-bottom: 0;
     color: var(--brand-color-black-text);
     text-decoration: none;
   }
+.effective-solutions {
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office1.jpg');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  margin: 0 auto;
+  padding-top: 192px;
+  padding-bottom: 192px;
+  max-width: 1440px;
+}
+
+.effective-solutions-title {
+
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+
+  margin-top: 0;
+
+  color: var(--brand-color-white-text);
+  text-align: center;
+
+
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+.button-studio {
+  font-family: "Roboto";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.1875;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background: var(--brand-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-top: 48px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--brand-color-white-text);
+  width: 170px;
+  height: 51px;
+}
+
+.button-studio:hover,
+.button-studio:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+button .link:click {
+  color: var(--brand-color-blue);
+}
+
+button .link:hover {
+  color: var(--brand-color);
+}
+
+button .link:default {
+  color: var(--brand-color);
+}
+
+.card-set {
+  display: flex;
+  gap: 24px;
+}
+
+.card-set-foto {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
+
+}
+
+.text-strategy,
+.text-foto-port {
+
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black);
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.card-set>.straegy,
+.punctuality,
+.diligence {
+  flex-basis: calc(100% / 4);
+}
+
+.straegy,
+.punctuality,
+.diligence,
+.technologies {
+  width: 264px;
+  list-style: none;
+}
+
+.straegy-title,
+.punctuality-title,
+.diligence-title,
+.technologies-title {
+  width: 264px;
+  height: 72px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black-text);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.ourprinciples-title {
+  text-decoration: none;
+}
+
+.what-are-we-doing {
+  gap: var(--card-set-gap);
+  padding-bottom: 120px;
+}
+
+.foto-doing {
+  display: flex;
+  margin-top: 72px;
+  gap: var(--card-set-gap);
+}
+
+.what-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--brand-color-black);
+  margin-bottom: 0;
+  margin-top: 0;
+
+}
+
+.auto-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+}
+
+.our-team {
+  display: block;
+  background-color: var(--brand-color-white-background-color);
+
+
+
+}
+
+.our-team-title {
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--brand-color-black);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.container {
+
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+
+
+}
+
+.text-foto {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black);
+  margin-top: 32px;
+  margin-bottom: 0;
+}
+
+.text-pr {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black-text);
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+.item {
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 32px;
+  background: var(--brand-color-white-background);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+
+}
+
+.lowerpart {
+  background: var(--brand-color-black);
+  border: 1px solid var(--brand-color-black-1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.lowerpart-block {
+  display: inline-block;
+  color: var(--brand-color-white-background-color);
+  text-decoration: none;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1, 16;
+}
+
+.lowerpart-item {
+  color: var(--brand-color);
+  background: var(--brand-color-black);
+}
+
+.lowerpart-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  display: flex;
+  color: var(--brand-color-white-2);
+  width: 264px;
+  margin-bottom: 0;
+  margin-top: 16px;
+}
   
 }
 
