--- a/css/styles.css
+++ b/css/styles.css
@@ -781,6 +781,37 @@ text-decoration: none;
   line-height: 1.5;
 
 }
+.what-are-we-doing{
+  display: none;
+}
+.mobil-our-team-title{
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--brand-color-black);
+  padding-top: 96px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.our-team {
+  padding: 0;
+}
+.mobil-our-team {
+  display: block;
+  background-color: var(--brand-color-white-background-color);
+
+}
+.tabl-wardrobe-list{
+  display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 }
 
@@ -955,10 +986,48 @@ text-decoration: none;
     letter-spacing: 0.02em;
     color: var(--brand-color-black);
     display: flex;
-      justify-content: center;
     margin-top: 0;
     margin-bottom: 8px;
 }
+.tabl-straegy-title{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black-text);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.what-are-we-doing{
+  display: none;
+}
+ .tabl-our-team-title{
+ font-size: 36px;
+ line-height: 1.11;
+ text-align: center;
+ letter-spacing: 0.02em;
+ text-transform: capitalize;
+ color: var(--brand-color-black);
+ padding-top: 96px;
+ margin-top: 0;
+ margin-bottom: 0;
+}
+.mobil-our-team{
+  display: block;
+  background-color: var(--brand-color-white-background-color);
+  
+}
+.our-team{
+  padding: 0;
+}
+.tabl-wardrobe-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 }
 
@@ -2501,9 +2570,43 @@ label {
 
 
 
+.wardrobe-icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.wardrobe-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
 
 
+}
+.wardrobe-title-icon {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--brand-color);
+  border-radius: 50%;
+}
 
+.wardrobe-icon-svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+}
 .bakdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
