--- a/css/styles.css
+++ b/css/styles.css
@@ -792,6 +792,7 @@ text-decoration: none;
   text-transform: capitalize;
   color: var(--brand-color-black);
   padding-top: 96px;
+  padding-bottom: 72px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -811,6 +812,38 @@ text-decoration: none;
     margin-left: auto;
     margin-right: auto;
 }
+.mobil-card-set-foto{
+  display: flex;
+  flex-direction: column;
+  
+  gap: 72px;
+}
+.mobil-text-foto{
+  font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--brand-color-black);
+    margin-top: 32px;
+    margin-bottom: 0;
+}
+.moil-text-pr{
+font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black-text);
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+
+
+
+
 
 
 }
@@ -1008,6 +1041,7 @@ text-decoration: none;
  text-transform: capitalize;
  color: var(--brand-color-black);
  padding-top: 96px;
+ padding-bottom: 72px;
  margin-top: 0;
  margin-bottom: 0;
 }
@@ -1021,13 +1055,43 @@ text-decoration: none;
 }
 .tabl-wardrobe-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 24px;
   margin-top: 8px;
   margin-left: auto;
   margin-right: auto;
 }
+.tabi-card-set-foto{
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
+  flex-wrap: wrap;
+  margin-top: 72px;
+  justify-content: space-evenly;
+}
+.mobil-text-foto {
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black);
+  margin-top: 32px;
+  margin-bottom: 0;
+}
 
+.moil-text-pr {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--brand-color-black-text);
+  margin-top: 8px;
+  margin-bottom: 0;
+}
 
 }
 
@@ -2569,7 +2633,17 @@ label {
 }
 
 
+.item {
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 32px;
+  background: var(--brand-color-white-background);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 
+}
 .wardrobe-icon {
   width: 100%;
   height: 100%;
